syntax = "proto3";

package dnf.v1;

option go_package = "dnf/proto/v1;sessionv1";
option java_multiple_files = true;
option java_package = "com.dnfm.mina.protobuf.generated";
option java_outer_classname = "SessionProto";

// PING消息 - Module ID: 10006
message PingRequest {
}

message PingResponse {
    int32 error = 1;
    int32 responsetime = 2;
}

message PingTypesRequest {
    int64 timestamp = 1;
}

message PingTypesResponse {
    int32 error = 1;
    int64 timestamp = 2;
}

// SESSION_LOGOUT消息
message SessionLogoutRequest {
    uint64 auth_index = 1;
}

message SessionLogoutResponse {
    int32 error = 1;
    int32 server_type = 2;
    int64 server_key = 3;
}
